UI: fix alignment of radio buttons in legacy forms. (#41439) (#7591)
https://mantis.ilias.de/view.php?id=41439

--- a/src/UI/templates/default/Input/input.less
+++ b/src/UI/templates/default/Input/input.less
@@ -234,11 +234,6 @@ select.form-control {
   margin-top: 0px;
 }
 
-.radio input[type="radio"],
-.radio-inline input[type="radio"] {
-  vertical-align: top;
-}
-
 .radio .help-block {
   padding-left: @il-padding-xxlarge-horizontal;
 }
